<resources>
    <string name="app_name">Spendalyzer</string>
    <string name="home">Home</string>
    <string name="analyze">Analytics</string>
    <string name="help">Help</string>
    <string name="spendings">Spendings</string>
    <string name="openDrawer">Open navigation</string>
    <string name="closeDrawer">Close navigation</string>
    <string name="upi_spent">Spent using UPI</string>
    <string name="from_atm">Withdrawn at ATM</string>
    <string name="contact">For contact &amp; suggestion</string>
    <string name="mail">Email: khankashif165@gmail.com</string>
    <string name="donate">Want to donate?</string>
    <string name="upi">UPI: khankashif98.kk12-1@okicici</string>
    <string name="creator">Created by Kashif</string>
    <string name="version">Version: 1.0.0</string>
    <string name="summary">Summary</string>
    <string name="transactions_today">Transactions today</string>
    <string name="transactions_this_month">Transactions this month</string>
    <string name="transactions_this_year">Transactions this year</string>
    <string name="transactions_this_week">Transactions this week</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="debits">Debits</string>
    <string name="credits">Credits</string>
    <string name="select_period">Select a period</string>
    <string name="transactions_by_date">Transactions by date</string>
    <string name="date_range">Select date range</string>
    <string name="add_cash">Add cash transaction</string>
    <string name="cash_transactions">Cash transactions</string>
    <string name="faqs">FAQs</string>
    <string name="acc_q">How much accurate are the numbers?</string>
    <string name="acc_a">Not 100% accurate as it reads details from the SMS related to transactions which are present in your mobile inbox.</string>
    <string name="safe_q">Is this app safe?</string>
    <string name="safe_a">Yes. It totally works offline.</string>
</resources>